# Auth_1

./: Changelog.md  pyproject.toml  ruff.toml
auth_service/: docker-compose.yml  pyproject.toml  requirements.txt
auth_service/alembic/versions/: 268c5333e9fd_partition_login_history_by_login_at.py  9738913ac48c_extend_user_model_for_social_auth.py  f0b84b0988f2_add_new_model_usersocialaccount.py
auth_service/app/: cli.py  main.py  settings.py
auth_service/app/api/v1/routes/: auth.py  roles.py
auth_service/app/core/: dependencies.py  logging_config.py  oauth.py  security.py
auth_service/app/db/: session.py
auth_service/app/models/: __init__.py  base.py  login_history.py  role.py  social_user_account.py  user.py  user_role.py
auth_service/app/services/: auth_service.py  role_service.py
auth_service/app/utils/: cache.py  password_generator.py  rate_limiter.py
auth_service/infra/nginx/: default.conf  nginx.conf
auth_service/tests/: test_role.py  test_user_role.py
