[project]
name = "auth-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioredis>=2.0.1",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "fastapi>=0.115.13",
    "orjson>=3.10.18",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=6.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.41",
    "structlog>=25.4.0",
    "uvicorn>=0.34.3",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
    "alembic>=1.16.2",
    "authlib>=1.6.0",
    "itsdangerous>=2.2.0",
    "pytest-cov>=6.2.1",
]

[tool.hatch.build]
targets.wheel.packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
